syntax = "proto3";
package pb;

// 消息发送
message MessageSend {
    int32 receiver_type = 1; // 接收者类型，0：user;1:group
    int64 receiver_id = 2; // 接收者id
    int32 type = 3; // 消息类型
    string content = 4; // 消息内容
    int64 send_sequence =5; // 消息id
}